funcion que verifica el ITEM_No
